feat: enhance preorder campaign management with campaign tier validation and response updates